# chatterbox_service

./: expose_voice.bat  main.py  pyproject.toml  server.py
