[project]
name = "chatterbox-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "chatterbox-tts>=0.1.6",
    "fastapi>=0.128.0",
    "ml-dtypes>=0.4.0",
    "onnx>=1.19.0",
    "resemble-perth>=1.0.1",
    "uvicorn>=0.40.0",
]
